--- a/CVHomework3.vcxproj
+++ b/CVHomework3.vcxproj
@@ -18,6 +18,9 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="part5a.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{2CCC1D86-28AC-4DF4-9692-41092B68EB70}</ProjectGuid>
     <RootNamespace>CVHomework3</RootNamespace>
@@ -118,9 +121,6 @@
       <AdditionalDependencies>"$(OPENCV_DIR)\lib\opencv_world340.lib";%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="main.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
