--- a/CVHomework3.vcxproj.filters
+++ b/CVHomework3.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="part5a.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
